Refactor imports, switch to `List.copyOf` for immutability, and replace null checks with `Objects::nonNull` for improved code clarity and consistency.