@@ -28,7 +28,7 @@ public final class SessionGraphSnapshot
 		this.mode = mode == null ? SessionGraphMode.GP_PER_HOUR : mode;
 		this.entries = entries == null
 			? Collections.emptyList()
-			: Collections.unmodifiableList(new ArrayList<>(entries));
+			: List.copyOf(entries);
 		this.totalLoot = totalLoot;
 		this.gpPerHour = gpPerHour;
 		this.topPlayer = topPlayer == null ? "" : topPlayer;
